tests/samples/invalid/implicit_uninitialized_pointer_type.pn
fn main() -> i32
{
	var x;
	var a: i32 = 400;
	&x = &a;
	return: x
}
